fix alignment issues in home section and added photo style for 1400px down

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -283,8 +283,23 @@ footer {
     #home-welcome {
         height:50%;
         text-align: center;
-        margin-left: 25%;
+        width:100%;
     }
+
+    #home-welcome h2 {
+        padding-left: 0;
+        padding-top:10%;
+    }
+
+    #home-welcome p {
+        width: 75%;
+        padding-left: 12%;
+    }
+
+    #home-vide {
+        width: 100%;
+    }
+
 
     #video-container {
         margin: 0;
@@ -297,7 +312,7 @@ footer {
     }
 
     #about-me {
-        height:1200px;
+        height:1300px;
         width:100%;
     }
     
@@ -321,5 +336,17 @@ footer {
         height: 50%;
         padding:0;
     }
+
+    #photo {
+        float: none;
+        height:40%;
+        margin: 0 auto;
+        padding-top: 2%;
+    }
+
+    #photo-container {
+        margin:5%;
+    }
+
 
 }
